test_regress/t/t_event_control_unsup.out
%Error-UNSUPPORTED: t/t_event_control_unsup.v:14:7: Unsupported: timing control statement in this location
                                                  : ... In instance t
                                                  : ... Suggest have one timing control statement per procedure, at the top of the procedure
   14 |       @(clk);
      |       ^
%Error-UNSUPPORTED: t/t_event_control_unsup.v:16:7: Unsupported: timing control statement in this location
                                                  : ... In instance t
                                                  : ... Suggest have one timing control statement per procedure, at the top of the procedure
   16 |       @(clk);
      |       ^
%Error: Exiting due to
